--- a/main.css
+++ b/main.css
@@ -1,7 +1,6 @@
 body {
-    height: 100%;
     margin: 0;
-    background: linear-gradient(to bottom, #444, #fff) no-repeat fixed;
+    background: linear-gradient(to bottom, #444, #fff) fixed;
 }
 .box {
     width: 90%;
